--- a/src/index.css
+++ b/src/index.css
@@ -723,6 +723,7 @@ h4 {
 
 .fomFooter {
     display: flex;
+    flex-direction: row;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
