--- a/src/index.css
+++ b/src/index.css
@@ -753,6 +753,24 @@ h4 {
     width: 30px;
     margin-right: 15px;
 }
+/* para la pagina de contacto */
+/* Contact.css */
+.contact-container {
+    text-align: center;
+    padding: 20px;
+}
+
+.contact-heading {
+    font-size: 24px;
+    color: #ffb61a; /* Color del encabezado */
+}
+
+.contact-info {
+    font-size: 16px;
+    color: #333; /* Color del texto principal */
+}
+
+
 
 @media (max-width:700px) {
 
