Nuevo banner y centrado de texto

--- a/src/index.css
+++ b/src/index.css
@@ -294,7 +294,7 @@ a {
 }
 
 .homeP {
-    text-align: justify;
+    text-align: center;
     margin-left: 50px;
     margin-right: 50px;
     font-size: 20px;
