--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
     background-color: #000000;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-around;
     align-items: center;
     position: fixed;
     z-index: 1;
@@ -27,6 +27,21 @@
 }
 
 .boton:hover{
+    cursor: pointer;
+    background-color: #e99100;
+}
+
+.botonCuenta{
+    border:2px solid #DF922F;
+    color:white;
+    background-color: #000000;
+    cursor: pointer;
+    transition: background-color 0.3s;
+    width: 100px;
+    height: 30px;
+}
+
+.botonCuenta:hover{
     cursor: pointer;
     background-color: #e99100;
 }
