--- a/src/index.css
+++ b/src/index.css
@@ -881,3 +881,121 @@ h4 {
 .productList tr:hover {
     background-color: #ddd;
 }
+
+/*ofertas */
+.image-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Para centrar verticalmente en la pantalla */
+    margin-top: 20px; /* Espacio en blanco arriba */
+    margin-bottom: 20px; /* Espacio en blanco abajo */
+  }
+  
+  /* Estilos adicionales para la imagen, si es necesario */
+  .image-container img {
+    max-width: 100%;
+    max-height: 100%;
+    animation: zoomIn 1s ease-in-out; /* Agrega la animación a la imagen */
+  }
+  
+/* Favs.css */
+@keyframes zoomIn {
+    0% {
+      transform: scale(0.8);
+    }
+    100% {
+      transform: scale(1.0);
+    }
+  }
+  
+
+/* Estilos para el botón de cerrar */
+.close-button {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: none;
+    border: none;
+    cursor: pointer;
+  }
+  
+  /* Estilos para el fondo oscuro detrás del cuadro emergente */
+  .popup-bg {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Fondo oscuro con opacidad */
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1; /* Asegura que el fondo esté sobre otros elementos */
+  }
+  
+  /* Estilos para el cuadro emergente */
+  .popup {
+    background-color: #F7F7F7;
+    padding: 20px;
+    border: 1px solid #F7F7F7;
+    border-radius: 10px;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+    z-index: 2; /* Asegura que el cuadro emergente esté sobre el fondo oscuro */
+    position: relative;
+  }
+  
+  /* Estilos adicionales para el contenido dentro del cuadro emergente, como campos de inicio de sesión o registro */
+  .popup-content {
+    /* Agrega estilos según el contenido de tus cuadros emergentes */
+  }
+  .close-button-img {
+    width: 30px; /* Ajusta el ancho según tus necesidades */
+    height: 30px; /* Ajusta el alto según tus necesidades */
+  }
+  
+  .input-container {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+    background-color: #E6E6E6;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    padding: 5px;
+  }
+  
+  .icon-user {
+    font-size: 20px; /* Ajusta el tamaño del icono según tus necesidades */
+    color: #fff; /* Color del icono */
+    background-color: #E6E6E6; /* Color de fondo del icono */
+    border-radius: 5px;
+    margin-right: 5px; /* Espacio entre el icono y el input */
+  }
+  
+  .input-container input {
+    flex: 1;
+    border: none;
+    outline: none;
+    background: transparent;
+  }
+  .custom-icon{
+    width: 50px;   
+    height: auto;
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+
+  .popup-title {
+    text-align: center; /* Centrar horizontalmente el texto */
+    line-height: 2; /* Ajustar el valor para centrar verticalmente el texto */
+  }
+  
+  .botoningreso{
+    background-color: #DF922F; /* Color de fondo */
+    border: none; /* Quita el borde predeterminado */
+    border-radius: 5px; /* Bordes redondeados */
+    color: #000000; /* Color de texto negro */
+    width: auto; /* Ancho automático, igual que el de los input */
+    padding: 10px 20px; /* Relleno para un mejor aspecto */
+    cursor: pointer; /* Cambia el cursor a una mano para indicar que es un enlace */
+  }
