--- a/src/index.css
+++ b/src/index.css
@@ -20,13 +20,13 @@
     z-index: 1;
 }
 
-.boton{
+.boton {
     background-color: #ffb61a;
     cursor: pointer;
     transition: background-color 0.3s;
 }
 
-.boton:hover{
+.boton:hover {
     cursor: pointer;
     background-color: #e99100;
 }
@@ -353,7 +353,7 @@ a {
 
 .CardProducto {
     width: 200px;
-    height: 200px;
+    height: auto;
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 60% 40%;
@@ -368,7 +368,6 @@ a {
     display: flex;
     justify-content: center;
     align-items: center;
-
 }
 
 .CardCProductoImg img {
@@ -430,7 +429,8 @@ a {
     margin: 0 5px;
   } */
 
-.pagination a, .botonFirst{
+.pagination a,
+.botonFirst {
     display: inline-block;
     padding: 5px 10px;
     color: #000000;
@@ -441,12 +441,13 @@ a {
     height: 35px;
 }
 
-.pagination a:hover, .botonFirst:hover {
+.pagination a:hover,
+.botonFirst:hover {
     background-color: #E6E7E8;
     border-color: #b8b8b8;
 }
 
-.pagination .active a{
+.pagination .active a {
     background-color: #E6E7E8;
     border-color: #FFBD1A;
 }
@@ -490,7 +491,7 @@ a {
 
     .CardProducto {
         width: 150px;
-        height: 150px;
+        height: auto;
     }
 
     .CardProductoInfo h5 {
@@ -646,7 +647,28 @@ textarea  */
 
 /* ------------- Detalles -----------------*/
 
-.detallesNombre{
+.cardContainer {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.detailsContainer {
+    max-width: 800px;
+    min-height: 400px;
+    margin: 20px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    background-color: #fff;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: repeat(10, 10%)
+}
+
+.detallesNombre {
     height: 70px;
     width: 100%;
     background-color: #000000;
@@ -656,27 +678,78 @@ textarea  */
     flex-direction: row;
     align-items: center;
     justify-content: center;
+    border-radius: 8px;
+    grid-column: 1/3;
+    grid-row: 1/3;
 }
 
-.detallesNombre h2{
+.detallesNombre h2 {
     font-size: 40px;
 }
 
-.detallesNombre img{
+.detallesNombre img {
     height: 50px;
     padding-right: 10px;
 }
 
-.detallesNombre a{
+.detallesNombre a {
     position: absolute;
     right: 0;
 }
 
-.imgenesDetalleProducto{
-    width: 100px;
+.imgenesDetalleProducto {
+    width: 150px;
+    border-radius: 8px;
 }
 
+.imgContainer {
+    overflow: hidden;
+    width: 150px;
+    margin: auto;
+    border-radius: 8px;
+}
 
+.sliderContainer{
+    grid-column: 1/2;
+    grid-row: 4/10;
+}
+
+.slider {
+    display: flex;
+    transition: transform 0.5s ease-in-out;
+}
+
+.thumbnailContainer {
+    display: flex;
+    justify-content: center;
+    margin-top: 10px;
+    overflow-x: hidden;
+}
+
+.thumbnail {
+    width: 30px;
+    height: 30px;
+    margin: 2.5px;
+    cursor: pointer;
+    opacity: 0.7;
+    transition: opacity 0.3s ease-in-out;
+    scroll-snap-align: center;
+    border-radius: 8px;
+}
+
+.thumbnail.activeImg {
+    opacity: 1;
+}
+
+.priceDetailContainer{
+    grid-column: 2/3;
+    grid-row: 4/10;
+}
+.botonAlqularProducto{
+    border: none;
+    border-radius: 8px;
+    padding: 10px;
+}
 /* ------------------ Footer ----------------------*/
 
 .footer {
@@ -805,6 +878,7 @@ h4 {
     width: 30px;
     margin-right: 15px;
 }
+
 /* para la pagina de contacto */
 /* Contact.css */
 .contact-container {
@@ -900,7 +974,8 @@ h4 {
     margin: 20px auto;
 }
 
-.productList th, .productList td {
+.productList th,
+.productList td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
@@ -918,7 +993,7 @@ h4 {
     background-color: #ddd;
 }
 
-.tdBoton{
+.tdBoton {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
@@ -926,7 +1001,7 @@ h4 {
     align-items: center;
 }
 
-.botonEliminarProducto{
+.botonEliminarProducto {
     border: none;
     border-radius: 10px;
     padding: 5px;
@@ -938,28 +1013,33 @@ h4 {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh; /* Para centrar verticalmente en la pantalla */
-    margin-top: 20px; /* Espacio en blanco arriba */
-    margin-bottom: 20px; /* Espacio en blanco abajo */
-  }
-  
-  /* Estilos adicionales para la imagen, si es necesario */
-  .image-container img {
+    height: 100vh;
+    /* Para centrar verticalmente en la pantalla */
+    margin-top: 20px;
+    /* Espacio en blanco arriba */
+    margin-bottom: 20px;
+    /* Espacio en blanco abajo */
+}
+
+/* Estilos adicionales para la imagen, si es necesario */
+.image-container img {
     max-width: 100%;
     max-height: 100%;
-    animation: zoomIn 1s ease-in-out; /* Agrega la animación a la imagen */
-  }
-  
+    animation: zoomIn 1s ease-in-out;
+    /* Agrega la animación a la imagen */
+}
+
 /* Favs.css */
 @keyframes zoomIn {
     0% {
-      transform: scale(0.8);
+        transform: scale(0.8);
     }
+
     100% {
-      transform: scale(1.0);
+        transform: scale(1.0);
     }
-  }
-  
+}
+
 
 /* Estilos para el botón de cerrar */
 .close-button {
@@ -969,43 +1049,49 @@ h4 {
     background: none;
     border: none;
     cursor: pointer;
-  }
-  
-  /* Estilos para el fondo oscuro detrás del cuadro emergente */
-  .popup-bg {
+}
+
+/* Estilos para el fondo oscuro detrás del cuadro emergente */
+.popup-bg {
     position: fixed;
     top: 0;
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Fondo oscuro con opacidad */
+    background: rgba(0, 0, 0, 0.5);
+    /* Fondo oscuro con opacidad */
     display: flex;
     justify-content: center;
     align-items: center;
-    z-index: 1; /* Asegura que el fondo esté sobre otros elementos */
-  }
-  
-  /* Estilos para el cuadro emergente */
-  .popup {
+    z-index: 1;
+    /* Asegura que el fondo esté sobre otros elementos */
+}
+
+/* Estilos para el cuadro emergente */
+.popup {
     background-color: #F7F7F7;
     padding: 20px;
     border: 1px solid #F7F7F7;
     border-radius: 10px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-    z-index: 2; /* Asegura que el cuadro emergente esté sobre el fondo oscuro */
+    z-index: 2;
+    /* Asegura que el cuadro emergente esté sobre el fondo oscuro */
     position: relative;
-  }
-  
-  /* Estilos adicionales para el contenido dentro del cuadro emergente, como campos de inicio de sesión o registro */
-  .popup-content {
+}
+
+/* Estilos adicionales para el contenido dentro del cuadro emergente, como campos de inicio de sesión o registro */
+.popup-content {
     /* Agrega estilos según el contenido de tus cuadros emergentes */
-  }
-  .close-button-img {
-    width: 30px; /* Ajusta el ancho según tus necesidades */
-    height: 30px; /* Ajusta el alto según tus necesidades */
-  }
-  
-  .input-container {
+}
+
+.close-button-img {
+    width: 30px;
+    /* Ajusta el ancho según tus necesidades */
+    height: 30px;
+    /* Ajusta el alto según tus necesidades */
+}
+
+.input-container {
     display: flex;
     align-items: center;
     margin-bottom: 10px;
@@ -1013,40 +1099,54 @@ h4 {
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 5px;
-  }
-  
-  .icon-user {
-    font-size: 20px; /* Ajusta el tamaño del icono según tus necesidades */
-    color: #fff; /* Color del icono */
-    background-color: #E6E6E6; /* Color de fondo del icono */
+}
+
+.icon-user {
+    font-size: 20px;
+    /* Ajusta el tamaño del icono según tus necesidades */
+    color: #fff;
+    /* Color del icono */
+    background-color: #E6E6E6;
+    /* Color de fondo del icono */
     border-radius: 5px;
-    margin-right: 5px; /* Espacio entre el icono y el input */
-  }
-  
-  .input-container input {
+    margin-right: 5px;
+    /* Espacio entre el icono y el input */
+}
+
+.input-container input {
     flex: 1;
     border: none;
     outline: none;
     background: transparent;
-  }
-  .custom-icon{
-    width: 50px;   
+}
+
+.custom-icon {
+    width: 50px;
     height: auto;
     padding-right: 10px;
     padding-left: 10px;
-  }
+}
 
-  .popup-title {
-    text-align: center; /* Centrar horizontalmente el texto */
-    line-height: 2; /* Ajustar el valor para centrar verticalmente el texto */
-  }
-  
-  .botoningreso{
-    background-color: #DF922F; /* Color de fondo */
-    border: none; /* Quita el borde predeterminado */
-    border-radius: 5px; /* Bordes redondeados */
-    color: #000000; /* Color de texto negro */
-    width: auto; /* Ancho automático, igual que el de los input */
-    padding: 10px 20px; /* Relleno para un mejor aspecto */
-    cursor: pointer; /* Cambia el cursor a una mano para indicar que es un enlace */
-  }
+.popup-title {
+    text-align: center;
+    /* Centrar horizontalmente el texto */
+    line-height: 2;
+    /* Ajustar el valor para centrar verticalmente el texto */
+}
+
+.botoningreso {
+    background-color: #DF922F;
+    /* Color de fondo */
+    border: none;
+    /* Quita el borde predeterminado */
+    border-radius: 5px;
+    /* Bordes redondeados */
+    color: #000000;
+    /* Color de texto negro */
+    width: auto;
+    /* Ancho automático, igual que el de los input */
+    padding: 10px 20px;
+    /* Relleno para un mejor aspecto */
+    cursor: pointer;
+    /* Cambia el cursor a una mano para indicar que es un enlace */
+}
