--- a/src/index.css
+++ b/src/index.css
@@ -31,21 +31,6 @@
     background-color: #e99100;
 }
 
-/* .botonCuenta{
-    border:2px solid #DF922F;
-    color:white;
-    background-color: #000000;
-    cursor: pointer;
-    transition: background-color 0.3s;
-    width: 100px;
-    height: 30px;
-}
-
-.botonCuenta:hover{
-    cursor: pointer;
-    background-color: #e99100;
-} */
-
 .menuImg {
     display: none;
 }
@@ -81,18 +66,9 @@ input[type="text"] {
     border-radius: 10px;
 }
 
-/* .header_iniciarSesion {
-    width: 145px;
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: space-evenly;
-    margin: 10px;
-} */
-
 .header_iniciarSesion {
     width: 100px;
-    height: 70px;
+    height: 80px;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -162,7 +138,7 @@ a {
 @media (max-width:860px) {
 
     .header {
-        height: 60px;
+        height: 90px;
         display: grid;
         grid-template-columns: 25% 50% 25%;
         grid-template-rows: 100%;
@@ -176,6 +152,7 @@ a {
         grid-template-rows: 100%;
         align-items: center;
         width: 100px;
+        margin: auto;
     }
 
     .menuImg {
@@ -214,12 +191,9 @@ a {
         grid-column: 3/4;
         grid-row: 1/2;
         width: 90px;
-        height: 50px;
+        height: 80px;
         display: flex;
-        flex-direction: column;
-        align-items: center;
-        justify-content: space-around;
-        margin: 0px;
+        margin: auto;
     }
 
     .header_iniciarSesion button {
@@ -1092,6 +1066,7 @@ h4 {
 }
 
 .input-container {
+    width: 100%;
     display: flex;
     align-items: center;
     margin-bottom: 10px;
@@ -1099,6 +1074,10 @@ h4 {
     border: 1px solid #ccc;
     border-radius: 5px;
     padding: 5px;
+}
+
+.input-container img{
+    width: 45px;
 }
 
 .icon-user {
@@ -1114,6 +1093,7 @@ h4 {
 }
 
 .input-container input {
+    padding: 5px;
     flex: 1;
     border: none;
     outline: none;
@@ -1135,18 +1115,21 @@ h4 {
 }
 
 .botoningreso {
-    background-color: #DF922F;
-    /* Color de fondo */
     border: none;
-    /* Quita el borde predeterminado */
-    border-radius: 5px;
-    /* Bordes redondeados */
-    color: #000000;
-    /* Color de texto negro */
-    width: auto;
-    /* Ancho automático, igual que el de los input */
+    border-radius: 8px;
     padding: 10px 20px;
-    /* Relleno para un mejor aspecto */
-    cursor: pointer;
-    /* Cambia el cursor a una mano para indicar que es un enlace */
+}
+
+.mensajeErrorInicioSesion{
+    width: 300px;
+    color: #ff0000;
+    /* margin-top: 30px; */
+    text-align: center;
+}
+
+@media (max-width:700px) {
+
+    .popup{
+        width: 300px;
+    }
 }
