--- a/src/index.css
+++ b/src/index.css
@@ -320,6 +320,18 @@ a {
 
 /* ----- Card Producto -----*/
 
+.CardProducto {
+    position: relative;
+  }
+  
+  .CardFavoritoIcon {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+  }
+  
+
 .homeCardProductos {
     max-width: 1200px;
     margin: auto;
