--- a/src/index.css
+++ b/src/index.css
@@ -76,6 +76,19 @@ input[type="text"] {
     margin: 10px;
 }
 
+.inicialesUser{
+    color: #DF922F;
+    width: 50px;
+    height: 50px;
+    font-size: 25px;
+    font-weight: 700;
+    border: 2px solid #DF922F;
+    border-radius: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .header_iniciarSesion button {
     border: none;
     border-radius: 5px;
