se agrego el boton para comunicarse por Wp

--- a/src/index.css
+++ b/src/index.css
@@ -1334,9 +1334,28 @@ h4 {
     text-align: center;
 }
 
+
+
 @media (max-width:700px) {
 
     .popup {
         width: 300px;
     }
+}
+
+
+/* Whatsapp */
+.whatsapp-icon {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+    background-color: #25d366; 
+    padding: 20px;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    z-index: 1000;
+}
+
+.whatsapp-icon:hover {
+    background-color: #128c7e; /* Color de fondo al pasar el mouse */
 }
