--- a/src/index.css
+++ b/src/index.css
@@ -301,7 +301,7 @@ a {
 
 .CardCategorias {
     width: 120px;
-    height: 120px;
+    height: 170px;
     display: grid;
     grid-template-columns: 100%;
     grid-template-rows: 70% 30%;
@@ -309,6 +309,8 @@ a {
 }
 
 .CardCategoriasImg {
+    width: 120px;
+    height: 120px;
     grid-column: 1/2;
     grid-row: 1/2;
     background-color: #E6E7E8;
@@ -319,7 +321,16 @@ a {
     align-items: center;
 }
 
+.CardCategoriasImg img {
+    /* width: 100%;
+    height: 100%; */
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    overflow: hidden;
+}
+
 .CardCategoriasP {
+    height: 50px;
     grid-column: 1/2;
     grid-row: 2/3;
     background-color: #FFBD1A;
@@ -329,6 +340,15 @@ a {
     justify-content: center;
     align-items: center;
     font-weight: bold;
+
+}
+
+.CardCategoriasP p {
+    color: #000000;
+}
+
+.CardCategoriasLink {
+    margin: 0;
 }
 
 /* ----- Card Producto -----*/
@@ -380,7 +400,6 @@ a {
     height: 100%;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
-    /* border-radius: 10px; */
 }
 
 .CardProductoInfo {
@@ -416,7 +435,7 @@ a {
     border: none;
     border-radius: 10px;
     font-weight: bold;
-    color: #e4e4e4;
+    color: #000000;
 }
 
 .CardProductoVisibilidad {
@@ -595,7 +614,7 @@ a {
     width: 200px;
 }
 
-.columnaNombreCategoria{
+.columnaNombreCategoria {
     width: 600px;
 }
 
@@ -663,7 +682,7 @@ a {
 
 /* ------------------ Opciones Administacion ----------------------*/
 
-.opcionesAdmin{
+.opcionesAdmin {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
@@ -679,7 +698,7 @@ a {
     flex-wrap: wrap;
 }
 
-.panelProductos h3{
+.panelProductos h3 {
     color: #DF922F;
     font-size: 25px;
 }
@@ -705,16 +724,13 @@ a {
     color: #000000;
 }
 
-.tituloTabla{
+.tituloTabla {
     text-align: center;
     font-size: 25px;
     height: 60px;
 }
 
-@media (max-width:860px) {
-
-
-}
+@media (max-width:860px) {}
 
 /* Agregar Producto */
 
