--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@
     background-color: #000000;
     display: flex;
     flex-direction: row;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     position: fixed;
     z-index: 1;
@@ -31,13 +31,13 @@
     background-color: #e99100;
 }
 
-.menuImg {
+.menuDesplegable {
     display: none;
 }
 
-.logoPage {
+.logoPageImg {
     width: 100px;
-    margin-left: 20px;
+    margin-left: 10px;
 }
 
 .headerBusqueda {
@@ -157,47 +157,21 @@ a {
         grid-template-rows: 100%;
     }
 
-    .logo_menu {
-        grid-column: 1/2;
-        grid-row: 1/2;
-        display: grid;
-        grid-template-columns: 50% 50%;
-        grid-template-rows: 100%;
-        align-items: center;
-        width: 100px;
-        margin: auto;
+    .logoPageDiv{
+        margin-left: 10px;
+        display: flex;
+        flex-direction: row;
+        width: 120px;
+        justify-content: space-between;
     }
-
-    .menuImg {
-        display: grid;
+    
+    .menuImg{
         width: 40px;
-        margin: 10px;
-        grid-column: 1/2;
-        grid-row: 1/2;
-        justify-self: center;
     }
 
-    .logoPage {
+    .logoPageImg{
         width: 50px;
-        grid-column: 2/3;
-        grid-row: 1/2;
-        margin-left: -5px;
-        justify-self: center;
-    }
-
-    .headerBusqueda {
-        grid-column: 2/3;
-        grid-row: 1/2;
-        width: 100%;
-    }
-
-    input[type="busqueda"] {
-        margin-left: 0px;
-        padding-left: 25px;
-    }
-
-    .headerLogoLupa {
-        margin-left: 5px;
+        margin: 0;
     }
 
     .header_iniciarSesion {
@@ -207,6 +181,28 @@ a {
         height: 80px;
         display: flex;
         margin: auto;
+    }
+
+    .header_iniciarSesionMobile{
+        grid-column: 2/4;
+        grid-row: 1/2;
+        justify-self: end;
+        display: flex;
+        flex-direction: row;
+        width: 65px;
+        align-items: center;
+
+    }
+
+    .header_iniciarSesionMobile button {
+        position: absolute;
+        top: 80px;
+        right: 10px;
+        border: none;
+        border-radius: 5px;
+        padding: 10px;
+        width: 60px;
+        text-align: center;
     }
 
     .header_iniciarSesion button {
@@ -225,6 +221,34 @@ a {
 
     nav img {
         width: 70px;
+    }
+
+    .menuDesplegable {
+        position: relative;
+        display: inline-block;
+    }
+
+    .menuDesplegableUl {
+        list-style: none;
+        position: absolute;
+        top: 50px;
+        left: 2px;
+        background-color: #f5dec0;
+        border-radius: 10px;
+        display: flex;
+        flex-direction: column;
+    }
+
+    .menuDesplegableLi {
+        padding: 10px;
+        cursor: pointer;
+        color: #000000;
+        font-weight: 700;
+        font-size: 18px;
+    }
+
+    .menuDesplegableLi:hover {
+        background-color: #DF922F;
     }
 }
 
@@ -618,7 +642,7 @@ a {
     width: 600px;
 }
 
-.columnaId{
+.columnaId {
     width: 80px;
 }
 
@@ -1129,9 +1153,9 @@ h4 {
 @media (max-width:700px) {
 
     .footer {
-        grid-template-rows: 30% 40% 30%;
+        grid-template-rows: 20% 30% 20% 30%;
         grid-template-columns: 100%;
-        height: 400px;
+        height: 700px;
     }
 
     .footerContacto {
@@ -1187,7 +1211,8 @@ h4 {
     }
 
     .divLogoFooter {
-        display: none;
+        grid-column: 1/2;
+        grid-row: 4/5;
     }
 
 }
@@ -1416,7 +1441,8 @@ h4 {
 /* Estilos para el modal en sí */
 .modal {
     display: flex;
-    flex-direction: column; /* Cambia la dirección a columna */
+    flex-direction: column;
+    /* Cambia la dirección a columna */
     justify-content: center;
     background: #fff;
     padding: 20px;
@@ -1425,29 +1451,29 @@ h4 {
     max-width: 400px;
     width: 100%;
     text-align: center;
-  }
+}
 
-  .modal a {
+.modal a {
     display: block;
     margin-top: 15px;
     color: #ffb61a;
     text-decoration: none;
     font-weight: bold;
-  }
+}
 
 .modalimg {
     max-width: 100%;
-    max-height: 300px; 
+    max-height: 300px;
     width: auto;
     height: auto;
-    margin: auto; 
+    margin: auto;
 }
 
 /* Estilos para el botón de cerrar */
 .close-button {
     position: absolute;
     max-width: 30px;
-    max-height: 30px; 
+    max-height: 30px;
     top: 10px;
     right: 10px;
     width: 30px;
@@ -1456,16 +1482,16 @@ h4 {
 }
 
 .social-buttons {
-  display: flex;
-  justify-content: center;
-  margin-top: 20px;
+    display: flex;
+    justify-content: center;
+    margin-top: 20px;
 }
 
 .social-buttons button {
-  background-color: #000000;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  margin: 0 10px;
-  cursor: pointer;
+    background-color: #000000;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin: 0 10px;
+    cursor: pointer;
 }
