--- a/src/index.css
+++ b/src/index.css
@@ -1311,6 +1311,19 @@ h4 {
     /* Asegura que el fondo esté sobre otros elementos */
 }
 
+.popup-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5); /* Fondo oscuro */
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    z-index: 1000;
+}
+
 /* Estilos para el cuadro emergente */
 .popup {
     background-color: #F7F7F7;
@@ -1494,4 +1507,135 @@ h4 {
     padding: 10px 20px;
     margin: 0 10px;
     cursor: pointer;
+}
+
+/* Estilos para reserva de productos */
+
+.reservaProducto {
+    font-family: Arial, sans-serif;
+    max-width: 800px;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+}
+
+.reservaProducto h2 {
+    color: #333;
+}
+
+.reservaProducto img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 8px;
+}
+
+.reservaProducto h3 {
+    border-bottom: 1px solid #ccc;
+    padding-bottom: 10px;
+    margin-top: 20px;
+}
+
+.reservaProducto img {
+    max-width: 100%;
+    height: auto;
+    max-height: 200px;
+    border-radius: 8px;
+}
+
+.reservaProducto p {
+    margin-bottom: 10px;
+}
+
+.reservaProducto .errorMessage {
+    color: red;
+    margin-top: 20px;
+}
+
+.reservaProducto button {
+    margin: 10px 0;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.reservaProducto .confirmButton {
+    background-color:#ffb61a;
+    color: #000000;
+    border-radius: 10px;
+    padding: 10px 15px;
+}
+
+.reservaProducto .cancelButton {
+    background-color: #ffb61a;
+    color: #000000;
+    border-radius: 10px;
+    padding: 10px 15px;
+    margin-left: 10px;
+}
+
+/* Estilos para login /login */
+
+.loginContainer {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+
+.loginTitle {
+    font-size: 24px;
+    margin-bottom: 20px;
+    text-align: center;
+}
+
+.loginForm {
+    display: flex;
+    flex-direction: column;
+}
+
+.loginLabel {
+    margin-bottom: 5px;
+}
+
+.loginInput {
+    padding: 10px;
+    margin-bottom: 15px;
+}
+
+.error-message {
+    color: red;
+    margin-bottom: 15px;
+}
+
+.loginButton {
+    background-color: #ffb61a;
+    color: black;
+    padding: 10px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+}
+
+.loginButton:hover {
+    background-color: #dd9e17;
+}
+
+.registerLink {
+    margin-top: 10px;
+    text-align: center;
+    font-size: 14px;
+    color: #333;
+}
+
+.registerLink a {
+    color: #ffb61a;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+.registerLink a:hover {
+    text-decoration: underline;
 }
