--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@
     justify-content: space-between;
     align-items: center;
     position: fixed;
-    z-index: 1;
+    z-index: 100;
 }
 
 .boton {
@@ -60,12 +60,6 @@ input[type="busqueda"] {
     padding-left: 40px;
 }
 
-/* input[type="text"] {
-    padding: 7px;
-    border: 1px solid #000000;
-    border-radius: 10px;
-} */
-
 .header_iniciarSesion {
     width: 100px;
     height: 80px;
@@ -93,6 +87,28 @@ input[type="busqueda"] {
     border: none;
     border-radius: 5px;
     padding: 2px;
+}
+
+.header_sesionIniciada {
+    grid-column: 2/4;
+    grid-row: 1/2;
+    justify-self: end;
+    display: flex;
+    flex-direction: row;
+    width: 70px;
+    align-items: center;
+
+}
+
+.header_sesionIniciada button {
+    position: absolute;
+    top: 80px;
+    right: 10px;
+    border: none;
+    border-radius: 5px;
+    text-align: center;
+    padding: 10px;
+    width: 75px;
 }
 
 .header_p {
@@ -157,19 +173,19 @@ a {
         grid-template-rows: 100%;
     }
 
-    .logoPageDiv{
+    .logoPageDiv {
         margin-left: 10px;
         display: flex;
         flex-direction: row;
         width: 120px;
         justify-content: space-between;
     }
-    
-    .menuImg{
+
+    .menuImg {
         width: 40px;
     }
 
-    .logoPageImg{
+    .logoPageImg {
         width: 50px;
         margin: 0;
     }
@@ -183,26 +199,13 @@ a {
         margin: auto;
     }
 
-    .header_iniciarSesionMobile{
-        grid-column: 2/4;
-        grid-row: 1/2;
-        justify-self: end;
-        display: flex;
-        flex-direction: row;
+    .header_sesionIniciada {
         width: 65px;
-        align-items: center;
-
     }
 
-    .header_iniciarSesionMobile button {
-        position: absolute;
-        top: 80px;
-        right: 10px;
-        border: none;
-        border-radius: 5px;
+    .header_sesionIniciada button {
         padding: 10px;
         width: 60px;
-        text-align: center;
     }
 
     .header_iniciarSesion button {
@@ -373,6 +376,243 @@ a {
 
 .CardCategoriasLink {
     margin: 0;
+}
+
+/* -------------Buscador --------------*/
+
+.search-block {
+    max-width: 650px;
+    margin: auto;
+    margin-top: 30px;
+    padding: 20px;
+    border: 1px solid #ccc;
+    border-radius: 8px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+}
+
+/* Estilos para el encabezado */
+.search-block h2 {
+    color: #DF922F;
+    text-align: center;
+}
+
+/* Estilos para el párrafo de instrucciones */
+.search-block p {
+    font-size: 18px;
+    text-align: center;
+}
+
+/* Estilos para los campos de búsqueda y fechas */
+.search-fields {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+}
+
+.date-picker {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+}
+
+/* Estilos para el contenedor del selector de fechas */
+.date-picker-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    height: 75px;
+}
+
+.date-picker-container-date {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 450px;
+}
+
+/* Estilos para las etiquetas de los selectores de fechas */
+.date-picker label {
+    font-size: 14px;
+    color: #333;
+    margin-bottom: 10px;
+}
+
+.inputFechaBuscador {
+    border: 1px solid #ccc;
+    border-radius: 10px;
+    width: 100%;
+}
+
+.inputFechaBuscador:focus {
+    outline: none;
+    border-color: #DF922F;
+}
+
+.react-datepicker__day--keyboard-selected,
+.react-datepicker__month-text--keyboard-selected,
+.react-datepicker__quarter-text--keyboard-selected,
+.react-datepicker__year-text--keyboard-selected {
+  background-color: #ffd67f;
+}
+.react-datepicker__day--selected, .react-datepicker__day--in-selecting-range, .react-datepicker__day--in-range,
+.react-datepicker__month-text--selected,
+.react-datepicker__month-text--in-selecting-range,
+.react-datepicker__month-text--in-range,
+.react-datepicker__quarter-text--selected,
+.react-datepicker__quarter-text--in-selecting-range,
+.react-datepicker__quarter-text--in-range,
+.react-datepicker__year-text--selected,
+.react-datepicker__year-text--in-selecting-range,
+.react-datepicker__year-text--in-range {
+  background-color: #DF922F;
+  color: #fff;
+}
+.react-datepicker__day--selected:hover, .react-datepicker__day--in-selecting-range:hover, .react-datepicker__day--in-range:hover,
+.react-datepicker__month-text--selected:hover,
+.react-datepicker__month-text--in-selecting-range:hover,
+.react-datepicker__month-text--in-range:hover,
+.react-datepicker__quarter-text--selected:hover,
+.react-datepicker__quarter-text--in-selecting-range:hover,
+.react-datepicker__quarter-text--in-range:hover,
+.react-datepicker__year-text--selected:hover,
+.react-datepicker__year-text--in-selecting-range:hover,
+.react-datepicker__year-text--in-range:hover {
+  background-color: #dd9e17;
+}
+
+.react-datepicker__day--keyboard-selected:hover,
+.react-datepicker__month-text--keyboard-selected:hover,
+.react-datepicker__quarter-text--keyboard-selected:hover,
+.react-datepicker__year-text--keyboard-selected:hover {
+    background-color: #dd9e17;
+}
+
+.react-datepicker__day--in-selecting-range:not(.react-datepicker__day--in-range,
+.react-datepicker__month-text--in-range,
+.react-datepicker__quarter-text--in-range,
+.react-datepicker__year-text--in-range),
+.react-datepicker__month-text--in-selecting-range:not(.react-datepicker__day--in-range,
+.react-datepicker__month-text--in-range,
+.react-datepicker__quarter-text--in-range,
+.react-datepicker__year-text--in-range),
+.react-datepicker__quarter-text--in-selecting-range:not(.react-datepicker__day--in-range,
+.react-datepicker__month-text--in-range,
+.react-datepicker__quarter-text--in-range,
+.react-datepicker__year-text--in-range),
+.react-datepicker__year-text--in-selecting-range:not(.react-datepicker__day--in-range,
+.react-datepicker__month-text--in-range,
+.react-datepicker__quarter-text--in-range,
+.react-datepicker__year-text--in-range) {
+    background-color: #f8d382;
+}
+
+
+/* Estilos para el icono del input del calendario */
+.react-datepicker__calendar-icon {
+    position: absolute;
+    left: -2px;
+    top: 50%;
+    transform: translateY(-50%);
+    cursor: pointer;
+    /* fill: #DF922F; */
+}
+
+.react-datepicker__header{
+    background-color: #f8e0c2;
+
+}
+
+.react-datepicker__close-icon::after  {
+    background-color: #DF922F;
+}
+
+/* Estilos para el input de fecha */
+.react-datepicker-wrapper {
+    width: 100%;
+}
+
+/* Estilos para el componente Autosuggest */
+#autosuggest-container {
+    width: 100%;
+    padding: 10px;
+    font-size: 16px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+}
+
+/* Estilos para el contenedor de sugerencias */
+.suggestions-container {
+    position: absolute;
+    width: 100%;
+    max-height: 200px;
+    overflow-y: auto;
+    border: 1px solid #ccc;
+    background-color: #fff;
+    z-index: 1;
+}
+
+/* Estilos para los elementos de la lista de sugerencias */
+.suggestions-container li {
+    list-style-type: none;
+    padding: 10px;
+    cursor: pointer;
+}
+
+/* Estilos para el botón de búsqueda */
+.search-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+/* Estilos para el input de busqueda y sus resulados*/
+
+.form-control {
+    width: 300px;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+}
+
+.form-control:focus {
+    outline-color: #ffc87f;
+}
+
+.suggestions-container {
+    width: 450px;
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    border: 1px solid #ccc;
+    border: none;
+    border-radius: 0 0 4px 4px;
+    max-height: 200px;
+    overflow-y: auto;
+    background-color: #fcfcfc;
+}
+
+/* .suggestions-container.visible {
+    display: block;
+}
+
+.suggestions-container.hidden {
+    display: none;
+} */
+
+.suggestions-container::-webkit-scrollbar {
+    width: 0px;
+    background: transparent;
 }
 
 /* ----- Card Producto -----*/
@@ -1317,7 +1557,8 @@ h4 {
     left: 0;
     width: 100%;
     height: 100%;
-    background: rgba(0, 0, 0, 0.5); /* Fondo oscuro */
+    background: rgba(0, 0, 0, 0.5);
+    /* Fondo oscuro */
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1501,12 +1742,12 @@ h4 {
 }
 
 .social-buttons button {
-  background-color: #000000;
-  color: white;
-  border: none;
-  padding: 10px 20px;
-  margin: 0 10px;
-  cursor: pointer;
+    background-color: #000000;
+    color: white;
+    border: none;
+    padding: 10px 20px;
+    margin: 0 10px;
+    cursor: pointer;
 }
 
 /* Historial.css */
@@ -1515,20 +1756,20 @@ h4 {
     max-width: 800px;
     margin: 0 auto;
     padding: 20px;
-  }
-  
-  .reservas-list {
+}
+
+.reservas-list {
     list-style-type: none;
     padding: 0;
-  }
-  
-  .reserva-item {
+}
+
+.reserva-item {
     border: 1px solid #ddd;
     margin-bottom: 10px;
     padding: 10px;
     background-color: #f9f9f9;
-  }
-  
+}
+
 
 
 /* Estilos para reserva de productos */
@@ -1582,7 +1823,7 @@ h4 {
 }
 
 .reservaProducto .confirmButton {
-    background-color:#ffb61a;
+    background-color: #ffb61a;
     color: #000000;
     border-radius: 10px;
     padding: 10px 15px;
